@@ -67,7 +67,8 @@ simulation_chamber=Simulation chamber
 panglia_branbalite_plant=Branbalite
 processing-grid-process-dna=Processing: DNA
 cliff-panglia=Panglia cliff
-panglia-big-rock=Composite igneous rock
+panglia-big-rock=Composite rock
+panglia-huge-igneous-rock=Igneous rock
 panglia_crusher=Hypercrusher
 
 [entity-description]
