@@ -273,21 +273,21 @@ data:extend({
   },
 
 
-  --[[{
+  {
     name = "panglia-huge-igneous-rock", --panglite
     type = "simple-entity",
     flags = {"placeable-neutral", "placeable-off-grid"},
-    icon = icons .. "panglia-huge-panglite-rock.png",
+    icon = icons .. "panglia-huge-igneous-rock-entity.png",
     subgroup = "grass",
     order = "b[decorative]-l[rock]-a[vulcanus]-b[huge-panglite-rock]",
-    collision_box = {{-1.7, -1.3}, {1.7, 1.3}},
-    selection_box = {{-2, -1.5}, {2, 1.5}},
+    collision_box = {{-1.3, -1.3}, {1.3, 1.3}},
+    selection_box = {{-1.5, -1.5}, {1.5, 1.5}},
     damaged_trigger_effect = hit_effects.rock(),
     dying_trigger_effect = decorative_trigger_effects.huge_rock(),
     minable =
     {
       mining_particle = "stone-particle",
-      mining_time = 2,
+      mining_time = 1,
       results =
       {
         {type = "item", name = "panglia_igneous_rock", amount_min = 26, amount_max = 153},
@@ -314,8 +314,8 @@ data:extend({
                                 + 0.005 * min(1, max(lava_basalts_range, lava_mountains_range, lava_hot_basalts_range, lava_hot_mountains_range))"
     },
     --pictures = hugerockpics,
-    pictures = spritesheets_to_pictures_panglia_lights({{path = decora .. "huge-igneous-rock/huge-igneous-rock", frame_count = 28}}),
-  },]]
+    pictures = spritesheets_to_pictures_panglia_lights({{path = decora .. "huge-igneous-rock/huge-igneous-rock", frame_count = 17}}),
+  },
 
   {
     name = "panglia-big-rock", --simple rock
@@ -344,7 +344,7 @@ data:extend({
       mining_time = 1,
       results =
       {
-        {type = "item", name = "panglia_igneous_rock", amount_min = 12, amount_max = 73},
+        --{type = "item", name = "panglia_igneous_rock", amount_min = 12, amount_max = 73},
         --{type = "item", name = "panglia_panglite", amount_min = 10, amount_max = 32},
         {type = "item", name = "iron-ore", amount_min = 0, amount_max = 3},
         {type = "item", name = "copper-ore", amount_min = 0, amount_max = 5},
