@@ -2,7 +2,7 @@
 Version: 0.4.0
 Date: 2025-09
   Changes:
-    - Added rocks with resources
+    - Added 2 types of rocks with resources
     - Added Igneous rock (solidified lava) that you can turn ito lava
     - Removed recipe to make crude oil
     - Added lubricant recipe from Branbalite (instead of heavy oil)
@@ -23,9 +23,12 @@ Date: 2025-09
     - Reduced universe precursor anim speed and max anim speed
     - Fixed universe precursor icon positioning
     - New universe precursor icon
+  Compatibility:
+    - Fixed Branbalite not being buildable when Metal & Stars is there
   UI:
     - Combined some icons in factoriopedia
     - Hidden the recipe category "crushing"
+    - Changed branbalite's factoriopedia preview
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 2025-09-15
